# monte-carlo-localisation

./: CMakeLists.txt  README.md  main.cpp
gui/: dialog.cpp  dialog.hpp  mainwindow.cpp  mainwindow.hpp  myscene.hpp
gui/ui/: dialog.ui  mainwindow.ui  ui_dialog.hpp  ui_mainwindow.hpp
lib/: formulas.hpp  localisation.cpp  localisation.hpp  rng.hpp  types.hpp
res/: src.qrc
